// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package Userspkg;

service Users {
    rpc add_new_user(add_new_userRequest) returns (add_new_userResponce) {}
    rpc is_id_registered(is_id_registeredRequest) returns (is_id_registeredResponce) {}
    rpc get_info_by_id(get_info_by_idRequest) returns (get_info_by_idResponce) {}
    rpc confirm_user(confirm_userRequest) returns (confirm_userResponce) {}
    rpc delete_user_by_id(delete_user_by_idRequest) returns (delete_user_by_idResponce) {}
    rpc find_unconfirmed_suppliers(find_unconfirmed_suppliersRequest) returns (find_unconfirmed_suppliersResponce) {}
    rpc confirm_supplier_by_id(confirm_supplier_by_idRequest) returns (confirm_supplier_by_idResponce) {}
}

message is_id_registeredRequest {
    int64 userId = 1;
}
message find_unconfirmed_suppliersResponce {
    repeated UserDTO usersArray = 1;
}
message add_new_userRequest {
    string type = 1;
}
message confirm_supplier_by_idRequest {
    int64 userId = 1;
}
message UserDTO {
    int64 id = 1;
    string type = 2;
    bool isConfirmed = 3;
    bool isSupplierStatusConfirmed = 4;
    bool isAdmin = 5;
}
message confirm_supplier_by_idResponce {
}
message delete_user_by_idResponce {
}
message confirm_userResponce {
}
message confirm_userRequest {
    int64 userId = 1;
}
message find_unconfirmed_suppliersRequest {
    int64 start = 1;
    int64 count = 2;
    string sort = 3;
}
message add_new_userResponce {
    int64 userId = 1;
}
message get_info_by_idResponce {
    int64 id = 1;
    string type = 2;
    bool isConfirmed = 3;
    bool isSupplierStatusConfirmed = 4;
    bool isAdmin = 5;
}
message get_info_by_idRequest {
    int64 userId = 1;
}
message is_id_registeredResponce {
    bool state = 1;
}
message delete_user_by_idRequest {
    int64 userId = 1;
}
