// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package AuthLogicpkg;

service AuthLogic {
    rpc sign_in_by_email(sign_in_by_emailRequest) returns (sign_in_by_emailResponce) {}
    rpc register_by_email(register_by_emailRequest) returns (register_by_emailResponce) {}
    rpc sign_in_by_tg_id(sign_in_by_tg_idRequest) returns (sign_in_by_tg_idResponce) {}
    rpc register_by_tg_id(register_by_tg_idRequest) returns (register_by_tg_idResponce) {}
}

message register_by_emailResponce {
    int64 userId = 1;
    string type = 2;
    bool isConfirmed = 3;
    bool isSupplierStatusConfirmed = 4;
    bool isAdmin = 5;
}
message register_by_tg_idResponce {
    int64 userId = 1;
    string type = 2;
    bool isConfirmed = 3;
    bool isSupplierStatusConfirmed = 4;
    bool isAdmin = 5;
}
message sign_in_by_emailResponce {
    int64 userId = 1;
    string type = 2;
    bool isConfirmed = 3;
    bool isSupplierStatusConfirmed = 4;
    bool isAdmin = 5;
}
message register_by_emailRequest {
    string email = 1;
    string password = 2;
    string type = 3;
}
message sign_in_by_tg_idRequest {
    int64 tgId = 1;
}
message sign_in_by_emailRequest {
    string email = 1;
    string password = 2;
}
message register_by_tg_idRequest {
    int64 tgId = 1;
    string type = 2;
}
message sign_in_by_tg_idResponce {
    int64 userId = 1;
    string type = 2;
    bool isConfirmed = 3;
    bool isSupplierStatusConfirmed = 4;
    bool isAdmin = 5;
}
